--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,9 @@ jobs:
       VERSION: "0.0.${{ github.run_number }}-${{ github.run_attempt }}"
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Tag & Release Version
         uses: logchatio/logchat-actions/release@main
         with:
