--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         shell: bash
 
       - name: Tag & Commit Artefact
-        run: git commit -m 'adding new artefact' brontobytes-aws-ingestion-python.zip
+        run: git add brontobytes-aws-ingestion-python.zip; git commit -m 'adding new artefact'
       - name: Create git tag
         run: git tag ${{ env.VERSION }}
       - name: Push git tag
