compress batch data sent to brontobytes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
           release_name: v${{ env.VERSION }}
 
       - name: Build Lambda Artefact
-        run: cd log_forwarder && zip ../brontobytes-aws-ingestion-python *
+        run: cd log_forwarder && zip -r ../brontobytes-aws-ingestion-python *
         shell: bash
 
       - name: Release Lambda Artefact
